@@ -1,3 +1,7 @@
+2005-08-03
+
+* added stringify(), negate()
+
 2005-07-21
 
 * added unicode operators.
